@@ -7,6 +7,7 @@ This is what's new and changed in the c-ares 1.5.3 release:
  o allow --enable-largefile and --disable-largefile configurations
  o configure process no longer needs nor checks size of curl_off_t
  o library will now be built with _REENTRANT symbol defined
+ o Improved configure detection of number of arguments for getservbyport_r
 
 Thanks go to these friendly people for their efforts and contributions:
 
